# BustDiscord

./: README.md  package.json
src/: index.html  splashscreen.html
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/assets/: bustdiscord.desktop
src-tauri/icons/: icon.icns
src-tauri/src/: Plugins.rs  main.rs
src-tauri/src/app/: commands.rs  mod.rs  window.rs
