[package]
name = "BustDiscord"
version = "0.0.0"
description = "A Discord client with external plugins"
authors = ["SergioRibera"]
license = ""
repository = "https://github.com/SergioRibera/BustDiscord"
edition = "2021"

[build-dependencies]
tauri-build = "1.3"

[dependencies]
tauri = { version = "1.3", features = ["shell-open", "api-all", "system-tray"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
